<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

    <modelVersion>4.0.0</modelVersion>
    <groupId>net.cserny</groupId>
    <artifactId>plexhelp-commander</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <!-- TODO commander-config repo, change yml properties for mongo and etc   -->
    <!-- TODO after everything ok, upgrade docker in debian + guide?   -->

    <modules>
        <module>plexhelp-commander-cli</module>
        <module>plexhelp-commander-core</module>
        <module>plexhelp-commander-web</module>
    </modules>

    <properties>
        <revision>1.0.0</revision>
        <java.version>25</java.version>
        <spring-boot.version>4.0.8</spring-boot.version>
        <picocli.version>4.7.7</picocli.version>
        <guava.version>33.5.0-jre</guava.version>
        <jimfs.version>1.3.0</jimfs.version>
        <rest-assured.version>6.0.1</rest-assured.version>
        <togglz.version>4.6.4</togglz.version>
        <commons-text.version>1.10.0</commons-text.version>
        <macker-plugin.version>1.0.2</macker-plugin.version>
        <logback-log.version>0.1.6</logback-log.version>
        <java-jwt.version>4.5.0</java-jwt.version>
        <bouncycastle.version>1.80</bouncycastle.version>
        <sshj.version>0.40.0</sshj.version>
        <maven-compiler-plugin.version>3.16.0</maven-compiler-plugin.version>
        <maven-flatten-plugin.version>1.6.0</maven-flatten-plugin.version>
        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
        <native-build-tools-plugin.version>0.10.6</native-build-tools-plugin.version>
        <openapi-plugin.version>7.25.0</openapi-plugin.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <mapstruct-lombok.version>0.2.0</mapstruct-lombok.version>
        <swagger-annot.version>2.2.25</swagger-annot.version>
        <springdoc-annot.version>5.1.0</springdoc-annot.version>
        <springdoc-annot-jak.version>3.0.0</springdoc-annot-jak.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok-mapstruct-binding</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli-spring-boot-starter</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.hierynomus</groupId>
                <artifactId>sshj</artifactId>
                <version>${sshj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.togglz</groupId>
                <artifactId>togglz-core</artifactId>
                <version>${togglz.version}</version>
            </dependency>
            <dependency>
                <groupId>org.togglz</groupId>
                <artifactId>togglz-mongodb</artifactId>
                <version>${togglz.version}</version>
            </dependency>
            <dependency>
                <groupId>org.togglz</groupId>
                <artifactId>togglz-spring-boot-starter</artifactId>
                <version>${togglz.version}</version>
            </dependency>
            <dependency>
                <groupId>org.togglz</groupId>
                <artifactId>togglz-spring-security</artifactId>
                <version>${togglz.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.vpelikh</groupId>
                <artifactId>swagger-annotations-jakarta</artifactId>
                <version>${springdoc-annot-jak.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.vpelikh</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-annot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>${commons-text.version}</version>
            </dependency>
            <dependency>
                <groupId>br.com.crazycrowd</groupId>
                <artifactId>logback-json-classic</artifactId>
                <version>${logback-log.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-mapstruct-binding</artifactId>
                <version>${mapstruct-lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${java-jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.jimfs</groupId>
                <artifactId>jimfs</artifactId>
                <version>${jimfs.version}</version>
            </dependency>
            <dependency>
                <groupId>io.rest-assured</groupId>
                <artifactId>rest-assured</artifactId>
                <version>${rest-assured.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${maven-flatten-plugin.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    <outputDirectory>${project.basedir}/target</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${mapstruct-lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <release>${java.version}</release>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
